--- a/config/cleo.yml
+++ b/config/cleo.yml
@@ -4,7 +4,7 @@
 # them in your Solr config file
 
 development:
-  url: "http://cleo.neighborhoods.com/cleo-primer/rest/elements/"
+  url: "http://localhost:8080/cleo-primer/"
 
 production:
-  url: "http://cleo.neighborhoods.com/cleo-primer/rest/elements/"
+  url: "http://localhost:8080/cleo-primer/"
