Changes to update Readme and remove common_methods. Common methods now in class methods

--- a/config/cleo.yml
+++ b/config/cleo.yml
@@ -1,8 +1,5 @@
-# Config file for the acts_as_solr plugin.
+# Config file for the acts_as_cleo plugin.
 #
-# If you change the host or port number here, make sure you update
-# them in your Solr config file
-
 development:
   url: "http://localhost:8080/cleo-primer/"
 
