Movement of files, addition of rails generator for install, and test updates

--- a/lib/generators/acts_as_cleo/install/templates/cleo.yml
+++ b/lib/generators/acts_as_cleo/install/templates/cleo.yml
@@ -1,6 +1,8 @@
 # Config file for the acts_as_cleo plugin.
 development:
   url: "http://localhost:8080/cleo-primer/"
+  run_async: true
+  queue: "cleo"
 
 test:
   url: "http://localhost:8080/cleo-primer/"
